# utilidades

./: .env.example  .gitignore  CHANGELOG.md  README.md  TODO.md  analyze_providers.py  app.py  pdf_excel_names.txt  pyproject.toml  tmp_compare_ia_vs_excel.py  tmp_debug_after_fix.py  tmp_debug_enruta.py  tmp_debug_enruta_output2.txt  tmp_debug_extract.py  tmp_debug_spark.py  tmp_debug_spark_output.txt  tmp_debug_spark_output2.txt  tmp_debug_spark_output3.txt  tmp_debug_spark_output4.txt  tmp_match_excel_pdf.py  tmp_ollama_extract_results.csv  tmp_ollama_request.py  tmp_raw_pdf_text.py  tmp_read_excel.py  tmp_run_extract.py  tmp_run_extract_validate.py  tmp_run_ollama_extract.py  tmp_test_local_extractor.py  tmp_test_local_extractor_min.py  tmp_test_local_extractor_min_output.txt  tmp_test_local_extractor_output.json
config/: settings.py
data/: acreedores benioffi.xlsx  acreedores dani.xlsx
docs/: architecture.md  estado-trabajo-parsers.md  estado_actual.md  flujo_parsing.md  ia-local.md  parsers.md
output/: acreedores_benioffi_example.csv  acreedores_benioffi_example.json
scripts/: choose_next_benioffi.py  compare_ai_vs_excel.py  debug_cuota_ss.py  export_extractions_to_csv.py  init_db.py  list_pdf_and_excel_names.py  rescan.py
tests/: audit_leroy_merlin_parser.py  conftest.py  extract_pdf_text.py  test_exporter.py  test_obramat_parser.py  test_ocr_fallback.py  test_ocr_runtime.py  test_parser_agus.py  test_parser_b2mobility.py  test_parser_beroil.py  test_parser_cementos_benidorm.py  test_parser_daniel_fernandez.py  test_parser_davofrio.py  test_parser_fempa.py  (+23 more)
(+85 files in other folders)
