[build-system]
requires = ["setuptools>=69.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "utilidades"
version = "0.1.0"
description = "Utilidad local para procesar facturas PDF con Streamlit, SQLite y parsers modulares."
readme = "README.md"
requires-python = ">=3.12,<3.13"
authors = [
  { name = "Nacho Cuenca" }
]
dependencies = [
  "streamlit>=1.44,<2.0",
  "pandas>=2.2,<3.0",
  "pdfplumber>=0.11,<0.12",
  "pypdf>=5.4,<6.0",
  "pypdfium2>=5.0,<6.0",
  "pytesseract>=0.3,<0.4",
  "openpyxl>=3.1,<4.0",
  "python-dotenv>=1.0,<2.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9.0"
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "config*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-ra"